fixes formatting on code block elements so they now wrap when super long. Not sure if we want that for sure yet

--- a/server/public/stylesheets/blog.css
+++ b/server/public/stylesheets/blog.css
@@ -30,6 +30,12 @@ h2 {
 h5 {
   font-size: 2.5em; }
 
+pre {
+  background-color: #363636;
+  color: #E0E0E0;
+  margin: 5px 20px;
+  white-space: normal; }
+
 @keyframes fadeInUp {
   0% {
     opacity: 0;
