--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -58,7 +58,13 @@ h5 {
   font-size: 2.5em;
 }
 
-
+// formatting for Trix Editor code blocks
+pre {
+  background-color: $black;
+  color: $white;
+  margin: 5px 20px;
+  white-space: normal;
+}
 
 
 
